Styling the game board

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
 </head>
 <body>
   <div class="container">
-    <div id="cell1" ></div>
-      <div id="cell2"></div>
-      <div id="cell3" number="3"></div>
-      <div id="cell4" number="4"></div>
-      <div id="cell5" number="5"></div>
-      <div id="cell6" number="6"></div>
-      <div id="cell7" number="7"></div>
-      <div id="cell8"  number="8"></div>
-      <div id="cell9" number="9"></div>
+    <h1 class="headTitle">Tic Tac Toe</h1>
+    <div id="game-board">
+      <div id="cell1" class="cell" number="1"></div>
+      <div id="cell2" class="cell" number="2"></div>
+      <div id="cell3" class="cell" number="3"></div>
+      <div id="cell4" class="cell" number="4"></div>
+      <div id="cell5" class="cell" number="5"></div>
+      <div id="cell6" class="cell" number="6"></div>
+      <div id="cell7" class="cell" number="7"></div>
+      <div id="cell8" class="cell" number="8"></div>
+      <div id="cell9" class="cell" number="9"></div>
+      <div id="line" class="line"></div> 
+    </div>
   </div>
 </body>
 </html>
