Adding score board with style

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       <div id="cell9" class="cell" number="9"></div>
       <div id="line" class="line"></div> 
     </div>
+    <h2 class="scoreTitle">Score</h2>
+    <div id="scoreBoard">
+      <div id="player1Score">Player 1: 0</div>
+      <div id="player2Score">Player 2: 0</div>
+    </div>
+    <div>
   </div>
 </body>
 </html>
