Adding reset score and rest game buttons with style

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       <div id="player2Score">Player 2: 0</div>
     </div>
     <div>
+      <button id="resetButton" class="resetButton">Reset Game</button>
+      <button id="resetScoresButton" class="resetButton">Reset Score</button>
+    </div>
+    <div>
   </div>
 </body>
 </html>
