Creating the function that checks for the inner

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <title>Tic Tac Toe</title>
   <link rel="stylesheet" href="index.css">
@@ -28,7 +28,8 @@
       <button id="resetButton" class="resetButton">Reset Game</button>
       <button id="resetScoresButton" class="resetButton">Reset Score</button>
     </div>
-    <div>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
